--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </header>
     <main class="main">
       <!-- Раздел: почему сложно сосредоточиться -->
-      <section class="section why-focus">
+      <section class="section section--breakdown why-focus">
         <h2 class="why-focus__heading sub-heading">
           Почему сосредоточиться так сложно
         </h2>
@@ -175,7 +175,7 @@
         </ul>
       </section>
       <!-- Раздел: советы по улучшению концентрации -->
-      <section class="section tips">
+      <section class="section section--breakdown tips">
         <h2 class="tips__heading sub-heading">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
